# rust-templates

./: README.md
bin_lib/: .editorconfig  Cargo.toml  README.md
bin_lib/.github/workflows/: ci.yml
bin_lib/src/: lib.rs
bioinfo/: .gitignore  Cargo.toml  README.md
bioinfo/.github/workflows/: cd.yml  create_binaries.yml
bioinfo/src/: cli.rs
lib/: Cargo.toml  Makefile  README.md
lib/src/: lib.rs
lib/src/tests/: mod.rs  test_helpers.rs
wasm/: .gitignore  Cargo.toml  Makefile  README.md
wasm/src/: lib.rs
wasm_react/: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md  package.json  webpack.config.js
wasm_react/public/: index.html
wasm_react/src/: index.jsx
