[package]
name = "{{crate_name}}"
version = "0.1.0"
authors = [ "{{authors}}" ]
edition = "2021"
exclude = [ "/tests", ".git", ".github", ".gitlab-ci.yml", "/assets", "/benches", "/static", "justfile", "Makefile", "/target"]
categories = ["command-line-utilities"]
readme = "README.md"
publish = false
license = "MIT"
repository = "https://github.com/{{username}}/{{project-name}}"

[lib]
name = "{{crate_name}}"
path = "src/lib.rs"

[[bin]]
name = "{{crate_name}}"
path = "src/main.rs"

[dependencies]
structopt = "*"
niffler = { version = "*", default-features = false, features = ["gz"] }
log = "*"
pretty_env_logger = "*"
anyhow = "*"
color-eyre = "*"
thiserror = "*"


[dev-dependencies]
predicates = "*"
assert_cmd = "*"
walkdir = "*"
criterion = "*"
regex = "*"
once_cell = "*"
rstest = "0.12.0"

[[bench]]
name = "benchmark"
harness = false

[profile.dev.package.backtrace]
opt-level = 3
