[package]
name = "{{crate_name}}"
version = "0.1.0"
authors = [ "{{authors}}" ]
edition = "2021"
exclude = [ "/tests", ".git", ".github", ".gitlab-ci.yml", "/assets", "/benches", "/static", "justfile", "Makefile", "/target", "/benches"]
readme = "README.md"
publish = false
license = "MIT"
repository = "https://github.com/{{username}}/{{project-name}}"

[dependencies]
log = "*"
color-eyre = "*"
thiserror = "*"


[dev-dependencies]
criterion = "*"
once_cell = "*"
rstest = "0.12.0"

[[bench]]
name = "benchmark"
harness = false

[profile.dev.package.backtrace]
opt-level = 3
